--- a/Installer/Localizations/English.lang
+++ b/Installer/Localizations/English.lang
@@ -2,14 +2,14 @@
 	username = "User name",
 	password = "Password",
 	submitPassword = "Submit password",
-	passwordsArentEqual = "Passwords aren't equal",
-	withoutPassword = "Without password:",
+	passwordsArentEqual = "Passwords are not the same. Try Again.",
+	withoutPassword = "Don't use a password:",
 	wallpapers = "Wallpapers:",
 	screensavers = "Screensavers:",
 	applications = "Third party apps:",
 	languages = "Language packs:",
-	accept = "I accept this shit:",
-	select = "Select filesystem for installation",
+	accept = "I accept this mess:",
+	select = "Select disk for installation",
 	erase = "Erase",
 	used = "used",
 	setup = "Setup your profile",
@@ -18,5 +18,5 @@
 	creating = "Creating user profile...",
 	installing = "Installing",
 	installed = "MineOS has been installed. Enjoy!",
-	reboot = "Reboot",
+	reboot = "Reboot the computer",
 }
