Я, блядь, ненавижу эти реквесты! Какой-то хуй проебал кавычку - а мне копаться в этом говне, выискивая в рантайме. Ну чо за(((

--- a/Localizations/Slovak.lang
+++ b/Localizations/Slovak.lang
@@ -118,7 +118,7 @@
 
 	uploadToPastebin = "Nahrať na Pastebin",
 	pasteName = "Meno pastu",
-	uploading = Nahrávanie prebieha..",
+	uploading = "Nahrávanie prebieha..",
 	uploadingSuccess = "Nahrané na ",
 	uploadingFailure = "Nahrávanie zlyhalo: ",
 }
