--- a/Installer/Localizations/Ukrainian.lang
+++ b/Installer/Localizations/Ukrainian.lang
@@ -1,22 +1,22 @@
 {
 	username = "Ім'я користувача",
 	password = "Пароль",
-	submitPassword = "Надіслати пароль",
-	passwordsArentEqual = "Паролі не рівні",
+	submitPassword = "Повторіть пароль",
+	passwordsArentEqual = "Паролі не збігаються",
 	withoutPassword = "Без пароля:",
 	wallpapers = "Шпалери:",
 	screensavers = "Заставка:",
 	applications = "Сторонні додатки:",
 	languages = "Пакети підтримки мов:",
-	accept = "Я приймаю це лайно:",
-	select = "Виберіть файлову систему для установки",
-	erase = "Стирати",
+	accept = "Я приймаю:",
+	select = "Виберіть файлову систему для встановлення"
+	erase = "Стерти",
 	used = "використовуваний",
 	setup = "Налаштування профілю",
 	customize = "Налаштування завантажень",
-	flashing = "Миготливий EEPROM...",
+	flashing = "Записуємо EEPROM..."
 	creating = "Створення профілю користувача...",
-	installing = "Установка",
-	installed = "Встановлені міни. Насолоджуйтесь!",
+	installing = "Встановлення",
+	installed = "MineOS встановлений. Насолоджуйтесь!",
 	reboot = "Перезавантажити",
 }
