--- a/Installer/Localizations/Ukrainian.lang
+++ b/Installer/Localizations/Ukrainian.lang
@@ -18,5 +18,5 @@
 	creating = "Створення профілю користувача...",
 	installing = "Встановлення",
 	installed = "MineOS встановлена. Насолоджуйтесь!",
-	reboot = "Перезавантажити",
+	reboot = "Перезавантажити"
 }
