--- a/Installer/Localizations/Ukrainian.lang
+++ b/Installer/Localizations/Ukrainian.lang
@@ -14,7 +14,7 @@
 	used = "використовуваний",
 	setup = "Налаштування профілю",
 	customize = "Налаштування завантажень",
-	flashing = "Записуємо EEPROM..."
+	flashing = "Записуємо EEPROM...",
 	creating = "Створення профілю користувача...",
 	installing = "Встановлення",
 	installed = "MineOS встановлена. Насолоджуйтесь!",
