Typo and propper German
Hello i've changed a little bit since i'm a native German Speaker. Mostly should be correct. :)

Greetings

--- a/Localizations/German.lang
+++ b/Localizations/German.lang
@@ -1,10 +1,10 @@
 {
 	downloading = "Download läuft",
-	CPUArchitecture = "CPU-Architektur",
-	RAMControl = "RAM control",
-	packageUnloading = "Automatische Entladung",
-	networkFTPNewConnection = "FTP-Verbindung",
-	networkFTPConnections = "FTP-verbindungen",
+	CPUArchitecture = "CPU Architektur",
+	RAMControl = "RAM Kontrolle",
+	packageUnloading = "Pakete Entpacken",
+	networkFTPNewConnection = "FTP Verbindung",
+	networkFTPConnections = "FTP Verbindungen",
 	networkFTPAddress = "Serveradresse",
 	networkFTPPort = "Server port",
 	networkFTPUser = "Benutzer",
@@ -12,16 +12,16 @@
 	updatingFileList = "Aktualisieren der Dateiliste...",
 	network = "Netzwerk",
 	networkTimeout = "Remotecomputer reagiert nicht",
-	networkAccessDenied = "Der Zugriff auf das Dateisystem des Remotecomputers wird verweigert. Wenden Sie sich an den Eigentümer, um entsprechende Berechtigungen zu erhalten",
+	networkAccessDenied = "Der Zugriff auf das Dateisystem des Remotecomputers wurde verweigert. Wenden Sie sich an den Eigentümer, um entsprechende Berechtigungen zu erhalten",
 	networkAllowReadAndWrite = "Zugriff auf das Dateisystem",
 	networkModemNotAvailable = "Modem anschließen, um Netzwerkfunktionen zu verwenden",
-	networkState = "Netzwerkmodus aktivieren",
+	networkState = "Netzwerk Aktivieren/Deaktivieren",
 	networkComputers = "Optionen für Netzwerk-PCs",
-	networkName = "Name dieses PCs",
-	networkSearchRadius = "Suche radius",
+	networkName = "Name des Computers",
+	networkSearchRadius = "Suchradius des Netzwerks.",
 	openWith = "Öffnen mit",
 	select = "Anwendung auswählen…",
-	keepInDock = "Halten Sie im dock",
+	keepInDock = "Im Dock behalten",
 	closeAllWindows = "Alle Fenster schließen",
 	closeWindow = "Schließen",
 	newWindow = "Neues Fenster",
@@ -33,16 +33,16 @@
 	fileName = "Dateinamen",
 	applicationName = "Anwendungsname",
 	file = "Datei",
-	notExists = "nicht vorhanden",
-	alreadyExists = "bereits vorhanden",
+	notExists = "Datei Existiert nicht",
+	alreadyExists = "Datei ist bereits vorhanden",
 	inDirectory = "im Verzeichnis",
-	needReplace = "Ersetzen Sie es?",
+	needReplace = "Ersetzen?",
 	yes = "Ja",
-	no = "Kein",
-	cancel = "Stornieren",
+	no = "Nein",
+	cancel = "Abbrechen",
 	open = "Öffnen",
 	applyToAll = "Auf alle anwenden",
-	toDirectory = "zum Verzeichnis",
+	toDirectory = "Zum Verzeichnis",
 	copying = "Kopieren",
 	faylaBlyad = "Datei",
 
@@ -55,19 +55,19 @@
 	path = "Pfad",
 	folder = "Ordner",
 	unknown = "Unbekannt",
-	calculatingSize = "Berechnung…",
+	calculatingSize = "Größe Berrechnen...",
 
 	properties = "Eigenschaft",
-	newFolderFromChosen = "Neuer Ordner von chosen",
+	newFolderFromChosen = "Neuen Ordner Wählen.",
 	create = "Neu",
 	newFolder = "Ordner",
 	newFile = "Datei",
-	newFileFromURL = "Datei von URL",
+	newFileFromURL = "Datei von Netzwerkpfad",
 	newImage = "Bild",
 	newApplication = "MineOS Anwendung",
 	paste = "Einfügen",
 	copy = "Kopieren",
-	cut = "Schneiden",
+	cut = "Ausschneiden",
 	edit = "Bearbeiten",
 	editInPhotoshop = "Bearbeiten in Photoshop",
 	rename = "Umbenennen",
@@ -81,44 +81,44 @@
 	delete = "Löschen",
 	addToFavourites = "Zu Favoriten hinzufügen",
 	removeFromFavourites = "Aus Favoriten entfernen",
-	setAsWallpaper = "Als hintergrund",
+	setAsWallpaper = "Als Hintergrund",
 	showPackageContent = "Paketinhalt anzeigen",
 	showContainingFolder = "Enthaltenden Ordner anzeigen",
-	flashEEPROM = "Flash zu EEPROM",
-	flashingEEPROM = "Blinkt im Gange. Computer nicht ausschalten...",
+	flashEEPROM = "Flash zum EEPROM",
+	flashingEEPROM = "Flashvorgang. Computer nicht ausschalten...",
 	print3D = "Modell drucken",
 
 	sortBy = "Sortieren",
 	sortByType = "Nach Typ",
-	sortByName = "Namentlich",
+	sortByName = "Nach Namen",
 	sortByDate = "Nach Datum",
 
-	aboutSystem = "Über system",
+	aboutSystem = "Über das System",
 	updates = "Sicherheitsaktualisierungen",
 	update = "Aktualisieren",
-	shutdown = "Shutdown",
+	shutdown = "Herunterfahren",
 	logout = "Abmelden",
-	reboot = "Neustart",
+	reboot = "Neustarten",
 
-	shortcutIsCorrupted = "Verknüpfung ist mit nicht vorhandener Datei verknüpft",
+	shortcutIsCorrupted = "Verknüpfung ist Fehlerhaft oder nicht mehr Vorhanden.",
 	sortAutomatically = "Am raster ausrichten",
 	onDesktop = "Auf dem desktop",
 	inCurrentDirectory = "Im aktuellen Verzeichnis",
 
 	errorWhileRunningProgram = "Fehler beim ausführen ",
-	sendedFeedback = "Feedback wurde gesendet",
-	sendFeedback = "Feedback senden",
-	yourContacts = "Ihre Kontakte",
+	sendedFeedback = "Fehlerbericht wurde gesendet",
+	sendFeedback = "Fehlerbericht senden",
+	yourContacts = "Meine Kontakte",
 	additionalInfo = "Zusätzliche Informationen",
 	stackTraceback = "Stapel-Rückverfolgung",
 
-	favourite = "Favorit",
-	search = "Suche",
-	mounts = "Mount",
+	favourite = "Favoriten",
+	search = "Suchen",
+	mounts = "Einhängen",
 
 	uploadToPastebin = "Auf Pastebin hochladen",
 	pasteName = "Name einfügen",
 	uploading = "Hochladen läuft...",
-	uploadingSuccess = "Hochgeladen ",
+	uploadingSuccess = "Hochgeladen.",
 	uploadingFailure = "Hochladen fehlgeschlagen:",
 }
