--- a/Installer/Localizations/Slovak.lang
+++ b/Installer/Localizations/Slovak.lang
@@ -3,6 +3,7 @@
 	password = "Heslo",
 	submitPassword = "Potrvdiť heslo",
 	passwordsArentEqual = "Heslá niesú rovnaké",
+	usernameInvalid = "Invalid username",
 	withoutPassword = "Bez hesla:",
 	wallpapers = "Tapety:",
 	screensavers = "Šetriče obrazovky:",
