--- a/Installer/Localizations/German.lang
+++ b/Installer/Localizations/German.lang
@@ -9,15 +9,15 @@
 	screensavers = "Bildschirmschoner:",
 	applications = "Apps von Drittanbietern:",
 	languages = "Sprachpakete:",
-	accept = "Ich akzeptiere diese Scheiße:",
+	accept = "Akzeptieren:",
 	select = "Dateisystem für die installation auswählen",
 	erase = "Löschen",
 	used = "verwendet",
 	setup = "Profil einrichten",
 	customize = "Anpassen-downloads",
-	flashing = "Blinkendes EEPROM...",
+	flashing = "Flashe EEPROM...",
 	creating = "Erstellen eines Benutzerprofils...",
 	installing = "Installieren",
-	installed = "Minen installiert wurde. Genießen Sie!",
+	installed = "MineOS wurde installiert",
 	reboot = "Neustart",
 }
