Fixed a few german translations

--- a/Localizations/German.lang
+++ b/Localizations/German.lang
@@ -1,40 +1,40 @@
 {
 	downloading = "Download läuft",
-	CPUArchitecture = "CPU Architektur",
-	RAMControl = "RAM Kontrolle",
-	packageUnloading = "Pakete Entpacken",
-	networkFTPNewConnection = "FTP Verbindung",
-	networkFTPConnections = "FTP Verbindungen",
-	networkFTPAddress = "Serveradresse",
-	networkFTPPort = "Server port",
+	CPUArchitecture = "Prozessorarchitektur",
+	RAMControl = "Arbeitsspeicherverwaltung",
+	packageUnloading = "Pakete entpacken",
+	networkFTPNewConnection = "FTP-Verbindung",
+	networkFTPConnections = "FTP-Verbindungen",
+	networkFTPAddress = "Server-Adresse",
+	networkFTPPort = "Server-Port",
 	networkFTPUser = "Benutzer",
 	networkFTPPassword = "Passwort",
-	updatingFileList = "Aktualisiere die Dateiliste...",
+	updatingFileList = "Dateiliste wird aktualisiert",
 	network = "Netzwerk",
-	networkTimeout = "Remotecomputer reagiert nicht",
-	networkAccessDenied = "Der Zugriff auf das Dateisystem des Remotecomputers wurde verweigert. Wende dich an den Eigentümer, um entsprechende Berechtigungen zu erhalten",
+	networkTimeout = "Der Remotecomputer reagiert nicht",
+	networkAccessDenied = "Der Zugriff auf das Dateisystem des Remotecomputers wurde verweigert. Wenden Sie sich an den Eigentümer, um entsprechende Berechtigungen zu erhalten",
 	networkAllowReadAndWrite = "Zugriff auf das Dateisystem",
 	networkModemNotAvailable = "Modem anschließen, um Netzwerkfunktionen zu verwenden",
-	networkState = "Netzwerk Aktivieren/Deaktivieren",
+	networkState = "Netzwerk aktivieren/deaktivieren",
 	networkComputers = "Optionen für Netzwerk-PCs",
 	networkName = "Name des Computers",
-	networkSearchRadius = "Suchradius des Netzwerks.",
+	networkSearchRadius = "Suchradius des Netzwerks",
 	openWith = "Öffnen mit",
-	select = "Anwendung auswählen…",
+	select = "Anwendung auswähle",
 	keepInDock = "Im Dock behalten",
 	closeAllWindows = "Alle Fenster schließen",
 	closeWindow = "Schließen",
 	newWindow = "Neues Fenster",
 	launch = "Starten",
-	launchWithArguments = "Starten mit Argumenten",
+	launchWithArguments = "Starten mit Befehlszeile-Argumenten",
 	dontShowAnymore = "Nicht wieder anzeigen",
-	newName = "Neuer name",
-	folderName = "Ordnernamen",
-	fileName = "Dateinamen",
+	newName = "Neuer Name",
+	folderName = "Ordnername",
+	fileName = "Dateiname",
 	applicationName = "Anwendungsname",
 	file = "Datei",
-	notExists = "Datei Existiert nicht",
-	alreadyExists = "Datei ist bereits vorhanden",
+	notExists = "Diese Datei existiert nicht",
+	alreadyExists = "Diese Datei ist bereits vorhanden",
 	inDirectory = "im Verzeichnis",
 	needReplace = "Ersetzen?",
 	yes = "Ja",
@@ -46,7 +46,7 @@
 	copying = "Kopieren",
 	faylaBlyad = "Datei",
 
-	areYouSure = "Bist du dir sicher?",
+	areYouSure = "Sind Sie sicher?",
 	emptyTrash = "Papierkorb leeren",
 	type = "Art",
 	size = "Größe",
@@ -57,8 +57,8 @@
 	unknown = "Unbekannt",
 	calculatingSize = "Berechne Größe...",
 
-	properties = "Eigenschaft",
-	newFolderFromChosen = "Neuen Ordner Wählen.",
+	properties = "Eigenschaften",
+	newFolderFromChosen = "Neuen Ordner wählen.",
 	create = "Neu",
 	newFolder = "Ordner",
 	newFile = "Datei",
@@ -71,12 +71,12 @@
 	edit = "Bearbeiten",
 	editInPhotoshop = "Bearbeiten in Photoshop",
 	rename = "Umbenennen",
-	editShortcut = "Verknüpfung Bearbeiten",
+	editShortcut = "Verknüpfung bearbeiten",
 	createShortcut = "Verknüpfung erstellen",
 	addToDock = "Zum Dock hinzufügen",
 	removeFromDock = "Aus Dock entfernen",
 	moveRight = "Nach rechts bewegen",
-	moveLeft = "Nach Links bewegen",
+	moveLeft = "Nach links bewegen",
 	archive = "Zum Archiv hinzufügen",
 	delete = "Löschen",
 	addToFavourites = "Zu Favoriten hinzufügen",
@@ -100,17 +100,17 @@
 	logout = "Abmelden",
 	reboot = "Neustarten",
 
-	shortcutIsCorrupted = "Verknüpfung ist Fehlerhaft oder nicht mehr Vorhanden.",
+	shortcutIsCorrupted = "Verknüpfung ist fehlerhaft oder nicht mehr vorhanden.",
 	sortAutomatically = "Am Raster ausrichten",
 	onDesktop = "Auf dem Desktop",
 	inCurrentDirectory = "Im aktuellen Verzeichnis",
 
-	errorWhileRunningProgram = "Fehler beim ausführen ",
+	errorWhileRunningProgram = "Fehler beim Ausführen",
 	sendedFeedback = "Fehlerbericht wurde gesendet",
 	sendFeedback = "Fehlerbericht senden",
 	yourContacts = "Meine Kontakte",
 	additionalInfo = "Zusätzliche Informationen",
-	stackTraceback = "Stapel-Rückverfolgung",
+	stackTraceback = "Stacktrace",
 
 	favourite = "Favoriten",
 	search = "Suchen",
@@ -119,6 +119,6 @@
 	uploadToPastebin = "Auf Pastebin hochladen",
 	pasteName = "Name einfügen",
 	uploading = "Hochladen läuft...",
-	uploadingSuccess = "Hochgeladen.",
-	uploadingFailure = "Hochladen fehlgeschlagen:",
+	uploadingSuccess = "Hochgeladen",
+	uploadingFailure = "Hochladen fehlgeschlagen!",
 }
