--- a/Localizations/Lolcat.lang
+++ b/Localizations/Lolcat.lang
@@ -44,7 +44,7 @@
 	applyToAll = "Apply 2 all",
 	toDirectory = "2 foldr",
 	copying = "Copying",
-	faylaBlyad = "fiel"",
+	faylaBlyad = "fiel",
 	areYouSure = "r u suer?",
 	emptyTrash = "Empty trash",
 	type = "Tyep",
@@ -54,7 +54,7 @@
 	path = "Path",
 	folder = "foldr",
 	unknown = "Unknown",
-	calculatingSize = "calculating…"",
+	calculatingSize = "calculating…",
 	properties = "propertiez",
 	newFolderFromChosen = "nu foldr frum chosen",
 	create = "nu",
@@ -84,30 +84,30 @@
 	showContainingFolder = "Show contaneing foldr",
 	flashEEPROM = "Flash 2 EEPROM",
 	flashingEEPROM = "Flashing in progres. Srsly dun turn off computr...",
-	print3D = "Print model"",
+	print3D = "Print model",
 	sortBy = "Sort",
 	sortByType = "By tyep",
 	sortByName = "By naym",
-	sortByDate = "By daet"",
+	sortByDate = "By daet",
 	aboutSystem = "bout sistem",
 	updates = "updatez",
 	update = "Refresh",
 	shutdown = "Shutdown",
 	logout = "Logout",
-	reboot = "Reboot"",
+	reboot = "Reboot",
 	shortcutIsCorrupted = "Shortcut iz linked 2 non-existent fiel",
 	sortAutomatically = "Align 2 grid",
 	onDesktop = "On desktop",
-	inCurrentDirectory = "In current foldr"",
+	inCurrentDirectory = "In current foldr",
 	errorWhileRunningProgram = "Error whiel runnin ",
 	sendedFeedback = "Feedback wuz sent",
 	sendFeedback = "Send feedback",
 	yourContacts = "ur contacts",
 	additionalInfo = "Additional informashun",
-	stackTraceback = "Stack traceback"",
+	stackTraceback = "Stack traceback",
 	favourite = "Favouriet",
 	search = "Search",
-	mounts = "Mounts"",
+	mounts = "Mounts",
 	uploadToPastebin = "Upload 2 Pastebin",
 	pasteName = "Paset naym",
 	uploading = "Uploading in progres...",
