--- a/Localizations/Polish.lang
+++ b/Localizations/Polish.lang
@@ -120,5 +120,5 @@
 	pasteName = "Nazwa Paste",
 	uploading = "Trwa wysyłanie...",
 	uploadingSuccess = "Wysłano do ",
-	uploadingFailure = "Błąd wysyłania: ",
+	uploadingFailure = "Błąd wysyłania: "
 }
