--- a/Applications/Settings.app/Localizations/English.lang
+++ b/Applications/Settings.app/Localizations/English.lang
@@ -37,8 +37,9 @@
 	appearanceDesktopBackground = "Desktop background",
 	appearanceDock = "Dock background",
 	appearanceMenu = "Menu background",
+	appearanceBlurEnabled = "Interface blurring",
 	appearanceTransparencyEnabled = "Interface transparency",
-	appearanceTransparencyInfo = "Disabling the last two options will significantly reduce the number of direct calls to the CPU / GPU and increase performance",
+	appearanceTransparencyInfo = "Disabling the last three options will significantly reduce the number of direct calls to the CPU / GPU and increase performance",
 	appearanceDropDownDefaultBackground = "Drop down menu background",
 	appearanceDropDownDefaultText = "Drop down menu text",
 	appearanceDropDownSeparator = "Drop down menu separator",
