--- a/Applications/Settings.app/Localizations/German.lang
+++ b/Applications/Settings.app/Localizations/German.lang
@@ -37,6 +37,7 @@
 	appearanceDesktopBackground = "Desktophintergrund",
 	appearanceDock = "Dock Farbe",
 	appearanceMenu = "Menü",
+	appearanceBlurEnabled = "Interface blurring",
 	appearanceTransparencyEnabled = "Interface Transparenz",
 	appearanceTransparencyInfo = "Das deaktivieren der letzten beiden Optionen reduziert die Anzahl der direkten Aufrufe an die CPU / GPU erheblich und erhöht die Leistung",
 	appearanceDropDownDefaultBackground = "Dropdown-Menü hintergrund",
