--- a/Applications/Settings.app/Localizations/Italian.lang
+++ b/Applications/Settings.app/Localizations/Italian.lang
@@ -37,6 +37,7 @@
 	appearanceDesktopBackground = "Sfondo Desktop",
 	appearanceDock = "Colore aggancio",
 	appearanceMenu = "Menu",
+	appearanceBlurEnabled = "Interface blurring",
 	appearanceTransparencyEnabled = "Trasparenza interfaccia",
 	appearanceTransparencyInfo = "Disabilitare le ultime due opzioni ridurrà significativamente il numero di chiamate dirette alla CPU / GPU e aumenterà le prestazioni",
 	appearanceDropDownDefaultBackground = "Sfondo menu a discesa",
