--- a/Applications/Settings.app/Localizations/Ukrainian.lang
+++ b/Applications/Settings.app/Localizations/Ukrainian.lang
@@ -37,6 +37,7 @@
 	appearanceDesktopBackground = "Фон робочого столу",
 	appearanceDock = "Колір Dock",
 	appearanceMenu = "Колір меню",
+	appearanceBlurEnabled = "Interface blurring",
 	appearanceTransparencyEnabled = "Прозорість інтерфейсу",
 	appearanceTransparencyInfo = "Відключення останніх двох опцій істотно знизить кількість прямих звернень до CPU / GPU і збільшить продуктивність",
 	appearanceDropDownDefaultBackground = "Фон випадаючого меню",
