Big update for Image API and Picture Edit

--- a/Applications/Picture Edit.app/Localizations/English.lang
+++ b/Applications/Picture Edit.app/Localizations/English.lang
@@ -6,6 +6,7 @@
 	path = "Path: ",
 	save = "Save",
 	saveAs = "Save as",
+	ok = "Ok",
 	cancel = "Cancel",
 	fileName = "File name",
 	newPicture = "New picture",
@@ -35,7 +36,7 @@
 		"F - braille tool",
 		" ",
 		"X - switch colors",
-		"D - make colors B/W",
+		"D - reset drawing colors",
 	},
 	tool1 = "Selection tool allows you to select preferred area on image and to perform some operations on it. Green dots mean start and end points (for example, it needs to line rasterization)",
 	fill = "Fill",
@@ -65,5 +66,24 @@
 	eraseSym = "Erase symbol:",
 	tool7 = "Text tool allows you to type some text data with selected primary color right on your image! It's time to say \"ur mom gay\" to everyone <3",
 	tool8 = "Fill tool allows you to automatically fill areas with selected primary color just like in Paint. Oh God, where is my RAM...?",
-	tool9 = "Braille tool allows you to draw pixels with Braille symbols on your image. Select preferred mini-pixels via menu above, configure transparency affecting and \"Let's go fellas!\""
+	tool9 = "Braille tool allows you to draw pixels with Braille symbols on your image. Select preferred mini-pixels via menu above, configure transparency affecting and \"Let's go fellas!\"",
+	image = "Image",
+	edit = "Edit",
+	rotate90 = "Rotate by 90 degrees",
+	rotate180 = "Rotate by 180 degrees",
+	rotate270 = "Rotate by 270 degrees",
+	flipVertical = "Flip vertical",
+	flipHorizontal = "Flip horizontal",
+	hueSaturation = "Hue/Saturation",
+	colorBalance = "Color balance",
+	photoFilter = "Photo filter",
+	invertColors = "Invert colors",
+	blackWhite = "Black and white",
+	gaussianBlur = "Gaussian blur",
+	hue = "Hue: ",
+	saturation = "Saturation: ",
+	brightness = "Brightness: ",
+	filterColor = "Filter color",
+	transparency = "Transparency: ",
+	force = "Force"
 }
