--- a/Applications/Picture Edit.app/Localizations/Russian.lang
+++ b/Applications/Picture Edit.app/Localizations/Russian.lang
@@ -6,6 +6,7 @@
 	path = "Путь: ",
 	save = "Сохранить",
 	saveAs = "Сохранить как",
+	ok = "Ok",
 	cancel = "Отмена",
 	fileName = "Имя файла",
 	newPicture = "Новое изображение",
@@ -35,7 +36,7 @@
 		"F - символы брайля",
 		" ",
 		"X - поменять цвета",
-		"D - убрать цвет в изображении",
+		"D - сбросить цвета рисованияы",
 	},
 	tool1 = "Инструмент выделения способен выделять отдельные участки изображения и делать с ними определенные действия. Зелеными точками обозначается начало и конец выделения (полезно для растеризации линии)",
 	fill = "Залить",
@@ -50,7 +51,7 @@
 	tool4 = "Инструмент пипетка позволяет получать первичный и вторичный цвет выбранного пикселя. Вы можете выбрать, какие цвета захватывать.",
 	pickBack = "Захватывать фон:",
 	pickFor = "Захватывать перед:",
-	tool5 = "Классический инструмент кисть прозволяет рисовать на изображении с указанным радиусом и прозрачностью. Вы можете выбрать, что будет рисоваться. Также можно выбрать символ, которым будет рисовать кисть, иначе она будет рисовать пустым символом.",
+	tool5 = "Классический инструмент кисть позволяет рисовать на изображении с указанным радиусом и прозрачностью. Вы можете выбрать, что будет рисоваться. Также можно выбрать символ, которым будет рисовать кисть, иначе она будет рисовать пустым символом.",
 	drawBack = "Рисовать на фоне:",
 	drawFor = "Рисовать на пер.:",
 	drawAlpha = "Изменять прозр.:",
@@ -65,5 +66,24 @@
 	eraseSym = "Стирать символ:",
 	tool7 = "Инструмент текста позволяет писать текст с указанным первичным и вторичным цветом прямо на изображении! Время сказать всем \"твоя мама гей\" <3",
 	tool8 = "Инструмент заливка позволяет автоматически заполнять зоны с указанным первичным и вторичным цветом, как это делает Paint. О боже, а где вся оперативка...?",
-	tool9 = "Утилита Брайля позволяет рисовать пиксели с помощью шрифта Брайля. Выберите мини-пиксели в свойствах, настройте прозрачность и поехали!"
+	tool9 = "Инструмент Брайля позволяет рисовать пиксели с помощью шрифта Брайля. Выберите мини-пиксели в свойствах, настройте прозрачность и поехали!",
+	image = "Изображение",
+	edit = "Редактировать",
+	rotate90 = "Повернуть на 90 градусов",
+	rotate180 = "Повернуть на 180 градусов",
+	rotate270 = "Повернуть на 270 градусов",
+	flipVertical = "Отразить по вертикали",
+	flipHorizontal = "Отразить по горизонтали",
+	hueSaturation = "Тон/Насыщенность",
+	colorBalance = "Цветовой баланс",
+	photoFilter = "Фотофильтр",
+	invertColors = "Инвертировать цвета",
+	blackWhite = "Черно-белый фильтр",
+	gaussianBlur = "Размытие по Гауссу",
+	hue = "Тон: ",
+	saturation = "Насыщенность: ",
+	brightness = "Яркость: ",
+	filterColor = "Цвет фильтра",
+	transparency = "Прозрачность: ",
+	force = "Сила: "
 }
