--- a/Installer/Localizations/Italian.lang
+++ b/Installer/Localizations/Italian.lang
@@ -3,21 +3,21 @@
 	password = "Password",
 	submitPassword = "Invia password",
 	passwordsArentEqual = "Le password non sono uguali",
-	usernameInvalid = "Invalid username",
+	usernameInvalid = "Invia username",
 	withoutPassword = "Senza password:",
-	wallpapers = "Wallpaper:",
+	wallpapers = "Sfondi:",
 	screensavers = "Screensaver:",
 	applications = "Applicazioni di terze parti:",
 	languages = "Pacchetti linguistici:",
 	accept = "Accetto questa merda:",
 	select = "Selezionare il file system per l'installazione",
-	erase = "Cancellare",
-	used = "utilizzare",
+	erase = "Cancella",
+	used = "utilizza",
 	setup = "Imposta il tuo profilo",
 	customize = "Personalizza gli scaricamenti",
 	flashing = "EEPROM lampeggiante...",
-	creating = "Creazione di profilo utente...",
-	installing = "Installare",
-	installed = "Le miniere sono state installate. Buon appetito!",
-	reboot = "Riavviare",
+	creating = "Creazione del profilo utente...",
+	installing = "Installazione",
+	installed = "MineOS è stato installato. Buon divertivento!",
+	reboot = "Riavvia",
 }
