--- a/Applications/Picture Edit.app/Localizations/Russian.lang
+++ b/Applications/Picture Edit.app/Localizations/Russian.lang
@@ -6,7 +6,7 @@
 	path = "Путь: ",
 	save = "Сохранить",
 	saveAs = "Сохранить как",
-	ok = "Ok",
+	ok = "Ок",
 	cancel = "Отмена",
 	fileName = "Имя файла",
 	newPicture = "Новое изображение",
@@ -21,9 +21,9 @@
 	view = "Вид",
 	transBack = "Прозрачность фона",
 	transFor = "Прозрачность переда",
-	hotkeys = "Хоткеи",
+	hotkeys = "Горячие клавиши",
 	hotkeysText = {
-		"Большая часть хоткеев совпадает с таковыми в настоящем Photoshop:",
+		"Большая часть горячих клавиш работают также, как и в настоящем Photoshop:",
 		" ",
 		"M - выделение",
 		"V - перемещение",
@@ -36,7 +36,7 @@
 		"F - символы брайля",
 		" ",
 		"X - поменять цвета",
-		"D - сбросить цвета рисованияы",
+		"D - сбросить цвета рисования",
 	},
 	tool1 = "Инструмент выделения способен выделять отдельные участки изображения и делать с ними определенные действия. Зелеными точками обозначается начало и конец выделения (полезно для растеризации линии)",
 	fill = "Залить",
@@ -46,7 +46,7 @@
 	clear = "Очистить",
 	crop = "Обрезать",
 	tool2 = "Инструмент перемещения позволять перемещать изображение куда угодно. Осторожно: большим картинками нужно много времени на перерисовку. Приветик, дерьмовые GPU!",
-	tool3 = "Инструмент ресайза позволяет изменять размер изображения в реальном времени. Вы можете указать направление, ввести ширину и высоту, затем умный скрипт сделает все за вас.",
+	tool3 = "Инструмент изменения размера позволяет изменять размер изображения в реальном времени. Вы можете указать направление, ввести ширину и высоту, затем умный скрипт сделает все за вас.",
 	expand = "Расширить",
 	tool4 = "Инструмент пипетка позволяет получать первичный и вторичный цвет выбранного пикселя. Вы можете выбрать, какие цвета захватывать.",
 	pickBack = "Захватывать фон:",
@@ -64,7 +64,7 @@
 	eraseFor = "Стирать перед:",
 	eraseAlpha = "Стирать прозр.:",
 	eraseSym = "Стирать символ:",
-	tool7 = "Инструмент текста позволяет писать текст с указанным первичным и вторичным цветом прямо на изображении! Время сказать всем \"твоя мама гей\" <3",
+	tool7 = "Инструмент текста позволяет писать текст с указанным первичным и вторичным цветом прямо на изображении! Пора сказать всем \"твоя мамка гей\" <3",
 	tool8 = "Инструмент заливка позволяет автоматически заполнять зоны с указанным первичным и вторичным цветом, как это делает Paint. О боже, а где вся оперативка...?",
 	tool9 = "Инструмент Брайля позволяет рисовать пиксели с помощью шрифта Брайля. Выберите мини-пиксели в свойствах, настройте прозрачность и поехали!",
 	image = "Изображение",
