Added polygons rasterization and function for Picture Edit

--- a/Applications/Picture Edit.app/Localizations/English.lang
+++ b/Applications/Picture Edit.app/Localizations/English.lang
@@ -85,5 +85,7 @@
 	brightness = "Brightness: ",
 	filterColor = "Filter color",
 	transparency = "Transparency: ",
-	force = "Force"
+	force = "Force",
+	rasterizePolygon = "Rasterize polygon",
+	polygonEdges = "number of polygon edges:"
 }
