--- a/Applications/MineCode IDE.app/Localizations/Russian.lang
+++ b/Applications/MineCode IDE.app/Localizations/Russian.lang
@@ -8,8 +8,8 @@
 	openingFile = "Открытие файла",
 	arguments = "Укажите аргументы через запятую",
 	launchWithArguments = "Запустить с аргументами",
-	addBreakpoint = "Добавить точку прерывания",
-	clearBreakpoints = "Удалить точки прерывания",
+	addBreakpoint = "Точка останова",
+	clearBreakpoints = "Удалить точки останова",
 	finishDebug = "Стоп",
 	continueDebug = "Продолжить",
 	gotoLine = "Перейти к строке",
